// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button test cases: should render basic button 1`] = `
<DocumentFragment>
  <a
    class="css-1hk78tk"
    href="javascript:void(0)"
    role="button"
  >
    Test
  </a>
</DocumentFragment>
`;

exports[`Button test cases: should render full button 1`] = `
<DocumentFragment>
  <a
    class="css-1fps30p"
    href="javascript:void(0)"
    role="button"
  >
    Test
  </a>
</DocumentFragment>
`;
